Make sure all text is readable.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: monospace;
+    font-family: "Lato", "Arial", sans-serif;
     margin: 0;
     padding: 20px;
     background-color: #2b2b2b;
@@ -39,19 +39,19 @@ body {
     background-color: #333;
     border: 1px solid #666;
     box-sizing: border-box;
-    padding: 4px;
-    font-size: 11px;
+    padding: 0 4px;
+    font-size: 12px;
+    font-family: "Lato", "Arial", sans-serif;
     white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
     display: flex;
     align-items: center;
     color: #ccc;
-    justify-content: center;
+    justify-content: flex-start;
+    z-index: 10;
 }
 .max-box.message {
     background-color: #555;
-    border-radius: 5px;
+    border-radius: 10px;
 }
 .max-box.comment {
     background-color: transparent;
@@ -86,6 +86,7 @@ body {
     width: 100%;
     height: 100%;
     pointer-events: none;
+    z-index: 5;
 }
 .patchline {
     stroke: #888;
